FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20191009:
AUTHOR: bapt@FreeBSD.org

  The ipv6 virtual category is gone, it does not make sense anymore in 2019
  where the norm in applications is to have support both ipv4 and ipv6.
  
20191001:
AUTHOR: bapt@FreeBSD.org

  BINARY_WRAPPERS allow to push in front of the PATH wrappers for binaries.
  This is useful when 2 tools do provide the same feature, but the configure
  scripts do test for some variables which are not in one of the tool.

20190919:
AUTHOR: madpilot@FreeBSD.org

  USES=xfce now defaults to gtk3, so for ported applications requiring
  GTK2 XFCE support USES=xfce:gtk2 should be used.

20190903:
AUTHOR: bapt@FreeBSD.org

  The ports tree now supports overlays

  overlays are a way to help users to integrate their own ports tree
  with the official ports tree without having to maintain clone of the
  official tree and remerge on regular basis.

  The ports tree will lookup in the overlays (in the order the are listed in
  OVERLAY variable) for the dependencies and the USES. It will use the first
  found.

  in order to use it the user have to declare his overlays that way in their
  make.conf:
  OVERLAYS= overlay1 overlay2 overlay3

20181225:
AUTHOR: kde@FreeBSD.org

  cmake.mk now defaults to out-of-sourcetree builds. The option 'outsource'
  has been removed. Ports that need an intree build now can pass 'insource'.

20181110:
AUTHOR: bapt@FreeBSD.org

  texinfo files are now installed in ${PREFIX}/share/info

20180630:
AUTHOR: kde@FreeBSD.org

  bsd.qt.mk has been replaced by qt.mk. This changes the way ports have to
  depend on Qt slightly.

  Previously one would have written
  	USE_QT4=foo bar
  or
  	USE_QT5=foo bar