@@ -812,8 +812,8 @@ ebusd:*:854:
 # free: 869
 # free: 870
 # free: 871
-# free: 872
-# free: 873
+bitmark:*:872:
+bitmark-recorder:*:873:
 # free: 874
 # free: 875
 # free: 876
