@@ -41,7 +41,7 @@ PLIST_SUB+=	LXQT_INCLUDEDIR="include/lxqt" \
 	LXQT_TRANSLATIONS="share/lxqt/translations" \
 	VERSION="${PORTVERSION}"
 
-CMAKE_ARGS+=	-DCMAKE_INSTALL_MANDIR=${MANDIRS} 
+CMAKE_ARGS+=	-DCMAKE_INSTALL_MANDIR=${PREFIX}/share/man
 
 # Available LXQt components are:
 _USE_LXQT_ALL=	buildtools globalkeys libfmqt lxqt qtxdg
