@@ -644,6 +644,26 @@
                 ..
             ..
         ..
+        man
+            man1
+            ..
+            man2
+            ..
+            man3
+            ..
+            man4
+            ..
+            man5
+            ..
+            man6
+            ..
+            man7
+            ..
+            man8
+            ..
+            man9
+            ..
+        ..
         misc
         ..
         nls
